--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css" />
         <link rel="stylesheet" href="./resources/ol3-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
-
+        <link rel="stylesheet" href="./resources/qgis2web.css"
         <style>
         html, body {
             background-color: #ffffff;
@@ -42,5 +41,8 @@
         <script src="./layers/layers.js" type="text/javascript"></script>
         <script src="./resources/qgis2web.js"></script>
         <script src="./resources/Autolinker.min.js"></script>
+  <a href="https://yamauchi-inochu.github.io/ol3-test/index.html">
+  <img src="https://ga-beacon.appspot.com/UA-108362089-1/https://yamauchi-inochu.github.io/ol3-test/index.html?pixel" />
+</a>
     </body>
 </html>
