--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="./resources/ol.css" />
         <link rel="stylesheet" href="./resources/ol3-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css"
-              
+        <link rel="stylesheet" href="./resources/qgis2web.css"> 
         <style>
         html, body {
             background-color: #ffffff;
