--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <script src="./resources/qgis2web.js"></script>
         <script src="./resources/Autolinker.min.js"></script>
   <a href="https://yamauchi-inochu.github.io/ol3-test/index.html">
-  <img src="https://ga-beacon.appspot.com/UA-108362089-1/https://yamauchi-inochu.github.io/ol3-test/index.html?pixel" />
+  <img src="https://ga-beacon.appspot.com/UA-108362089-1/yamauchi-inochu.github.io/ol3-test/index.html?pixel" />
 </a>
     </body>
 </html>
